--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/paulAlvarezCaceres/pruebaconreactpaul.git"
   "name": "my-app1",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages –d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
