--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/paulAlvarezCaceres/pruebaconreactpaul.git"
+  "homepage": "https://github.com/paulAlvarezCaceres/pruebaconreactpaul.git",
   "name": "my-app1",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages –d build",
+    "deploy" : "gh-pages –d build", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
