--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/paulAlvarezCaceres/pruebaconreactpaul.git",
+  "homepage": "https://paulalvarezcaceres.github.io/pruebaconreactpaul/",
   "name": "my-app1",
   "version": "0.1.0",
   "private": true,
